add static meta tags

--- a/cube.html
+++ b/cube.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#262637">
   <link rel="icon" type="image/x-icon" href="img/icon.png">
-  <title>pixel8 - cube</title>
+  <title>Pixel-8 Cube</title>
+  <meta property="og:title" content="Pixel-8 | Tiny Fantasy Console">
+  <meta property="og:description" content="Watch this cube on Pixel-8!">
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
+  <meta name="twitter:card" content="summary">
 </head>
 
 <body res="128"><img src="pattern.png" id="pattern" hidden><canvas width="4" height="4" id="canvasP" hidden></canvas></body>
