--- a/cube.html
+++ b/cube.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#262637">
-  <link rel="icon" type="image/x-icon" href="../img/icon.png">
+  <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>pixel8 - cube</title>
 </head>
 
-<body res="128"><img src="../pattern.png" id="pattern" hidden><canvas width="4" height="4" id="canvasP" hidden></canvas></body>
+<body res="128"><img src="img/pattern.png" id="pattern" hidden><canvas width="4" height="4" id="canvasP" hidden></canvas></body>
 <script src="https://nxrix.github.io/Pixel-8/js/pixel8.js"></script>
 <script>
 const prs = (r,g,b) => {
