--- a/editor.html
+++ b/editor.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="theme-color" content="#262637">
-   <link rel="icon" type="image/x-icon" href="../img/icon.png">
+   <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>Pixel-8 xyt Editor</title>
 </head>
 <style>
@@ -50,11 +50,11 @@
 </style>
 
 <body res="128">
-  <img src="../img/sprite.png" id="sprite">
+  <img src="img/sprite.png" id="sprite">
   <textarea id="input">col=(x|y);</textarea>
-  <img class="play" src="../img/play.png">
+  <img class="play" src="img/play.png">
 </body>
-<script src="../js/pixel8.js"></script>
+<script src="js/pixel8.js"></script>
 <script>
 /*
 col=x^y+t;[sx,sy]=rot(c,c,sx,sy,15);[sy,sz]=rot(c,15.5,sy,col%32,-30);
