--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#262637">
-  <link rel="icon" type="image/x-icon" href="../img/icon.png">
+  <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>pixel8</title>
 </head>
 
 <body res="128"></body>
-<script src="../js/pixel8.js"></script>
+<script src="js/pixel8.js"></script>
 <script>
 pixel8.input = "col=x|y";
 pixel8.encode = (x) => {
