--- a/mouse.html
+++ b/mouse.html
@@ -10,7 +10,7 @@
 <body res="64">
 
 </body>
-<script src="../js/pixel8.js"></script>
+<script src="js/pixel8.js"></script>
 <script>
 let t=0;
 function btn(x,y,d) {
