--- a/cube.html
+++ b/cube.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#262637">
   <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>Pixel-8 Cube</title>
-  <meta property="og:title" content="Pixel-8 | Tiny Fantasy Console">
+  <meta property="og:title" content="Pixel-8 Cube | Tiny Fantasy Console">
   <meta property="og:description" content="Watch this cube on Pixel-8!">
   <meta property="og:type" content="article" />
   <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
