add mouse meta tags

--- a/mouse.html
+++ b/mouse.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
+  <title>Pixel-8 Mouse</title>
+  <meta property="og:title" content="Pixel-8 Mouse | Tiny Fantasy Console">
+  <meta property="og:description" content="Try this mouse on Pixel-8!">
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
+  <meta name="twitter:card" content="summary">
 </head>
 
 <body res="64">
