replace `creation` with `card` in description

--- a/editor.html
+++ b/editor.html
@@ -8,7 +8,7 @@
    <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>Pixel-8 Editor</title>
   <meta property="og:title" content="Pixel-8 Editor | Tiny Fantasy Console">
-  <meta property="og:description" content="Edit this creation on Pixel-8!">
+  <meta property="og:description" content="Edit this card on Pixel-8!">
   <meta property="og:type" content="article" />
   <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
   <meta name="twitter:card" content="summary">
