--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>Pixel-8</title>
   <meta property="og:title" content="Pixel-8 | Tiny Fantasy Console">
-  <meta property="og:description" content="Try this creation on Pixel-8!">
+  <meta property="og:description" content="Try this card on Pixel-8!">
   <meta property="og:type" content="article" />
   <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
   <meta name="twitter:card" content="summary">
