replace `card` with `cart` as in `cartridge`

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Pixel-8</title>
   <meta property="og:title" content="Pixel-8 | Tiny Fantasy Console">
   <meta property="og:type" content="article" />
-  <meta property="og:description" content="Try this card on Pixel-8!">
+  <meta property="og:description" content="Try this cart on Pixel-8!">
   <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
   <meta name="theme-color" content="#262637">
   <meta name="twitter:card" content="summary">
