--- a/editor.html
+++ b/editor.html
@@ -8,7 +8,7 @@
   <title>Pixel-8 Editor</title>
   <meta property="og:title" content="Pixel-8 Editor | Tiny Fantasy Console">
   <meta property="og:type" content="article" />
-  <meta property="og:description" content="Edit this card on Pixel-8!">
+  <meta property="og:description" content="Edit this cart on Pixel-8!">
   <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
   <meta name="theme-color" content="#262637">
   <meta name="twitter:card" content="summary">
