move `prism.css` to `css/`

--- a/editor.html
+++ b/editor.html
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#262637">
   <meta name="twitter:card" content="summary">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="js/prism.css">
+  <link rel="stylesheet" href="css/prism.css">
   <script defer src="js/prism.js"></script>
 </head>
 
