--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ c {
     <h1 style="text-align:center">Pixel-8</h1><br>
     <canvas id="canvas"></canvas>
     <div class="note">
-      tiny Fantasy Console and JavaScript library for making tiny games or art that uses WebGL.<br><hr>
+      tiny Fantasy Console and JavaScript library for making tiny games or art that uses WebGL. <a class="linkBtn" href="https://github.com/nxrix/Pixel-8">Github</a><hr>
       <h3>Specifications</h3><br>
       <div class="table specs">
         <div>Display</div>
@@ -127,7 +127,7 @@ c {
         <div>trifill(x0,y0,x1,y1,x2,y2,c)</div>
         <p>draw a filled triangle with at [x0,y0][x1,y1][x2,y2] with color c.</p>
         <div>sspr(s,x,y,w,h)</div>
-        <p>draw sprite s at [x,y] with width w and height h.<br>the sprite should be exported using png to sprite tool!</p>
+        <p>draw sprite s at [x,y] with width w and height h.<br>the sprite should be exported using png to <a class="link" href="./img2str" style="text-decoration:none;">sprite tool</a>!</p>
         <div>print(t,x,y,c)</div>
         <p>print string t at [x,y] with color c.</p>
       </div>
