--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ c {
         <div>trifill(x0,y0,x1,y1,x2,y2,c)</div>
         <p>draw a filled triangle with at [x0,y0][x1,y1][x2,y2] with color c.</p>
         <div>sspr(s,x,y,w,h)</div>
-        <p>draw sprite s at [x,y] with width w and height h.<br>the sprite should be exported using png to <a class="link" href="./img2str">sprite tool</a>!</p>
+        <p>draw sprite s at [x,y] with width w and height h.<br>the sprite should be exported using png to <a class="link" href="../Pixel-8/img2str">sprite tool</a>!</p>
         <div>print(t,x,y,c)</div>
         <p>print string t at [x,y] with color c.</p>
       </div>
