--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ c {
       </div>
     </div>
   </div>
-  <script src="../Pixel-8/js/pixel8.js"></script>
+  <script src="../pixel-8/js/pixel8.js"></script>
 </body>
 <script>
 rgb = (r,g,b) => {
