--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ for (var i=0;i<4;i++) {
 }
 
 const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
-  manifestUrl: "https://raw.githubusercontent.com/ton-connect/demo-dapp/master/public/tonconnect-manifest.json",
+  manifestUrl: "https://nxrix.github.io/pixel-8/assets/tonconnect-manifest.json",
   buttonRootId: "ton-connect"
 });
 
