--- a/src/test.html
+++ b/src/test.html
@@ -15,29 +15,36 @@ canvas {
 </body>
 <script src="https://nxrix.github.io/pixel-8/src/pixel8.js"></script>
 <script>
-const PCG32 = (s) => {
-  return () => {
-    const x = Number(((s>>18n)^s)>>27n)>>>0;
-    const r = Number(s>>59n);
-    s = (s*6364136223846793005n+1442695040888963407n)&18446744073709551615n;
-    return ((x>>>r)|(x<<((32-r)&31)))>>>0;
-  };
-}
-const px8 = new Pixel8(300,300);
+const px8 = new Pixel8(128,128);
 canvas.width = px8.w;
 canvas.height = px8.h;
 const ctx = canvas.getContext("2d");
 const img = ctx.createImageData(px8.w,px8.h);
 const img_data = img.data;
 
+px8.printo = (t,x,y,c0=3,c1=0,c2=20) => {
+  [
+    [-1,-1],
+    [ 0,-1],
+    [ 1,-1],
+    [-1, 0],
+    [ 1, 0],
+    [-1, 1],
+    [ 0, 1],
+    [ 1, 1]
+  ].forEach(([i,j],k) => {
+    px8.print(t,x+i,y+j,k<3?c2:c1);
+  });
+  px8.print(t,x,y,c0);
+}
+
 let t = 0;
 let t0 = 0;
 let fps = 0;
 
-const s = 8;
+const str = "hello world";
 
 let u = (time) => {
-  const rnd = PCG32(0n);
   const dt = time - t0;
   if (1000/dt<100) {
     fps = (fps*t+1000/dt)/(t+1);
@@ -46,15 +53,19 @@ let u = (time) => {
   }
   t0 = time;
   px8.cls(0);
-  for (i=0;i<32;i++) {
-    for (j=0;j<32;j++) {
-      p = rnd()&0xffff;
-      px8.fillp(p,j);
-      px8.rectfill(i*(s+1),j*(s+1),i*(s+1)+s-1,j*(s+1)+s-1,i);
-      px8.fillp();
+
+  for (let i in str) {
+    for (let j=0;j<7;j++) {
+      px8.printo(str[i],px8.w2-str.length*2+i*4,px8.h2-2-Math.sin((i+j)/4+t/16)*4-(j-3.5));
     }
   }
-  px8.print(fps.toFixed(1),1,1,3);
+  for (let i in str) {
+    for (let j=0;j<7;j++) {
+      px8.print(str[i],px8.w2-str.length*2+i*4,px8.h2-2-Math.sin((i+j)/4+t/16)*4-(j-3.5),[25,22,13,15,10,6,3][j]);
+    }
+  }
+
+  px8.printo(fps.toFixed(1),2,2);
   
   for (let i=0;i<px8.w*px8.h;i++) {
     const c = Pixel8.palette[px8.buffer[i]];
